--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,7 +1,7 @@
 # This workflow will install Python dependencies, run tests and lint with a single version of Python
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
 
-name: TemplateBotBuild
+name: PblgblkCalendarBotBuild
 
 on:
   push:
@@ -23,7 +23,7 @@ jobs:
           echo "VCS_SHA=${GITHUB_SHA}" >> "$GITHUB_OUTPUT"
       - uses: mr-smithers-excellent/docker-build-push@v5.6
         with:
-          image: bomzheg/aiogram_template
+          image: bomzheg/pblgblk_calendar
           addLatest: true
           registry: docker.io
           username: ${{ secrets.DOCKERHUB_USERNAME }}
