--- a/config_dist/config.yaml
+++ b/config_dist/config.yaml
@@ -19,6 +19,6 @@ db:
   port: 5432
   login: postgres
   password: postgres
-  name: aiogram_template_bot
+  name: pblgblk_calendar
 redis:
   url: localhost
