--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,14 +2,11 @@ version: '3.2'
 
 services:
 
-  template_bot:
-    container_name: template_bot
+  pblgblk_calendar:
+    container_name: pblgblk_calendar
     restart: always
-    image: bomzheg/aiogram_template
+    image: bomzheg/pblgblk_calendar
     volumes:
-      - type: "bind"
-        source: "${HOME}/TemplateBot/log"
-        target: "/log"
       - type: "bind"
         source: "./config"
         target: "/config"
