--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ dependencies = [
     "greenlet<4.0.0",
     "dishka==1.7.2",
     "asgi-monitor>=0.4.0,<0.5.0",
+    "matplotlib"
 ]
 
 [project.optional-dependencies]
@@ -103,7 +104,7 @@ ignore = [
     "D",  # docstrings
     "ANN101", "ANN102",  # annotations for self and cls
     "ANN401",  # disallow Any
-    "EM101",  # forbidden exceptions with string literals
+    "EM101", "EM102",  # forbidden exceptions with string literals
     "RET505",  # it prevents if return else return
     "TRY003",  # forbidden long text messages for create exceptions
     "FA100", "FA102",  # from future import annotation related
